Upgrade project to use `Spring Security 6.0.x`, `Java 21` using openrewrite.